fixed side bar overlapping with breadcrumbs

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -274,3 +274,7 @@ a {
     display: block;
   }
 }
+
+.rst-content .sidebar {
+  margin-top: 80px !important;
+}
